traefik/traefik-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host("traefik.gruppe1.lan") && (PathPrefix("/dashboard") || PathPrefix("/api"))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
